--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "html-webpack-plugin": "^2.24.1",
     "redux-logger": "^2.7.4",
     "webpack": "^1.14.0",
-    "webpack-dev-server": "^1.16.2"
+    "webpack-dev-server": "^1.16.2",
+    "webpack-hot-middleware": "^2.13.2"
   }
 }
